feat: replace fetchs for hooks usage for AdvancedUIComponents Allitems (Playlist-Songs-Artists) | [#190]
