# Electron/src/swagger/api/services/ArtistsService.ts
@@ -77,6 +77,9 @@ export class ArtistsService {
     /**
      * Get Artist Streams
      * Get artist total streams of his songs
+     *
+     * Args:
+     * name (str): artist name
      * @param name
      * @returns any Successful Response
      * @throws ApiError
@@ -87,6 +90,27 @@ export class ArtistsService {
         return __request(OpenAPI, {
             method: 'GET',
             url: '/artists/{name}/streams',
+            path: {
+                'name': name,
+            },
+            errors: {
+                422: `Validation Error`,
+            },
+        });
+    }
+    /**
+     * Get Artist Songs
+     * Get artist songs
+     * @param name
+     * @returns any Successful Response
+     * @throws ApiError
+     */
+    public static getArtistSongsArtistsNameSongsGet(
+        name: string,
+    ): CancelablePromise<any> {
+        return __request(OpenAPI, {
+            method: 'GET',
+            url: '/artists/{name}/songs',
             path: {
                 'name': name,
             },
